# aiAmy

./: .gitignore  AiAmy.spec  README.md  config.ini  config.yml  main.spec  pyproject.toml
aiAmy/: MainWindow.py  main.py
ai_amy/: AmyAnimation.py  AmyController.py  ConfigController.py  MainWindow.py  Memory.py  ScrollableReadOnlyText.py  TextAndVisionInference.py  TextInference.py  main.py
chars/stony/: charconfig.yml
img/: stonyMove.xcf
src/ai_amy/: AmyAnimation.py  AmyController.py  AmyUtils.py  ConfigController.py  IdleController.py  ImageLabel.py  MainWindow.py  Memory.py  ScrollableReadOnlyText.py  TextInference.py  VisionInference.py  config_module.py  idle_module.py  input_window_module.py  main.py  output_window_module.py  run_ai_amy.py
src/ai_amy/model/: CharConfigModel.py  ChatCompletion.py
